add_executable(challenge_9 challenge_9.cpp)

add_executable(challenge_10 challenge_10.cpp)
target_link_libraries(challenge_10 cryptopp)

add_executable(challenge_11 challenge_11.cpp)
target_link_libraries(challenge_11 cryptopp)

add_executable(challenge_12 challenge_12.cpp)
target_link_libraries(challenge_12 cryptopp)

add_executable(challenge_13 challenge_13.cpp)
target_link_libraries(challenge_13 cryptopp)

add_executable(challenge_14 challenge_14.cpp)
target_link_libraries(challenge_14 cryptopp)

add_executable(challenge_15 challenge_15.cpp)

add_executable(challenge_16 challenge_16.cpp)
target_link_libraries(challenge_16 cryptopp)
